# OmniFinan

./: .gitignore  AGENTS.md  AI_BOUNDARY_SPEC.md  HUMAN_GUIDE.md  LICENSE  README.md  pyproject.toml
scripts/: backtester_demo.ipynb  unified_api_demo.ipynb
scripts/openclaw-market-sentiment/: SKILL.md
scripts/openclaw-market-sentiment/scripts/: openclaw_market_math.py
scripts/openclaw-quanta-dig/: SKILL.md
scripts/openclaw-stock-analysis/: SKILL.md
scripts/openclaw-stock-analysis/scripts/: openclaw_stock_technicals.py
src/omnifinan/: __init__.py  backtester.py  data_models.py  main.py  unified_api.py  visualize.py
src/omnifinan/agents/: debate_room.py  edges.py  fundamentals.py  graphs.py  macro.py  market_data.py  nodes.py  portfolio_manager.py  prompts.py  researcher_bear.py  researcher_bull.py  risk_manager.py  runnables.py  sentiment.py  state.py  technicals.py  valuation.py
src/omnifinan/analysis/: factor_backtest.py  factor_mining.py  indicators.py  options.py  transform.py
src/omnifinan/core/: __init__.py  config.py  experiment.py  observability.py  workflow.py
src/omnifinan/data/: __init__.py  cache.py  news.py  symbols.py  (+1 more)
tests/: OPENCLAW_MARKET_SENTIMENT_SKILL.md  openclaw_market_math.py  stock_analyse.py  test_agent_edges.py  test_agent_graphs.py  test_company_news_integration.py  test_credentials.py  test_data_cache.py  test_factor_backtest.py  test_factor_mining.py  test_llm_client.py  test_macro_agent.py  test_macro_source_policy.py  test_macro_structured.py  test_macro_visualize.py  test_marketdata_options.py  test_normalization.py  test_options_analytics.py  test_options_moomoo_only.py  test_runtime_config.py  test_sec_edgar_provider.py  test_symbols.py  test_unified_service_crypto.py
(+34 files in other folders)
